--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -174,7 +174,11 @@
 #footer nav li{display:inline; margin-right:20px;}
 #footer nav li:last-child{margin-right:0;}
 
+#footer { display: flex; /* Utiliza flexbox para alinear los elementos */ justify-content: space-between; /* Espacio entre las secciones */ flex-wrap: wrap; /* Permite que los elementos se envuelvan en pantallas más pequeñas */}
 
+.one_half { width: 48%; /* Ajusta el ancho de cada sección */ margin-right: 2%; /* Espacio entre las columnas */}
+
+.one_half:last-child { margin-right: 0; /* Elimina el margen derecho de la última columna */}
 /* Copyright
 --------------------------------------------------------------------------------------------------------------- */
 #copyright{padding:50px 0 80px; border-top:1px solid;}
