--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -143,7 +143,7 @@
 <div class="bgded overlay" style="background-image:url('images/demo/backgrounds/01.png');"> 
 
   <div class="wrapper row4">
-<footer id="footer" class="hoc clear"> 
+<footer id="footer" > 
     <div class="one_half">
         <h6 class="heading">Redes Sociales</h6>
         <ul class="nospace linklist">
